Adjusted button styling and markup

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <button>User Settings</button>
             </div>
             <div class="dpd-options">
-                <button><img src="./img/logoEbay.png" alt="#">Disconnect</button>
-                <button><img src="./img/logoAmazon.png" alt="#">Connect</button>
+                <button><img src="./img/logoEbay.png" alt="#"><p>Disconnect</p></button>
+                <button><img src="./img/logoAmazon.png" alt="#"><p>Connect</p></button>
             </div>
             <div class="dpd-expiration">Expires: 2020-04-28 15:42:45</div>
             <form class="dpd-form">
