Added Select Tag for Country, styled to match inputs, dropdown icon is difficult to style

--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
                     </div>
                     <div class="dpd-item dpd-item--country">
                         <label for="country">Country</label>
-                        <input type="text" id="country" name="country">
+                        <select type="text" id="country" name="country">
+                            <option value="canada">Canada</option>
+                            <option value="usa">USA</option>
+                            <option value="mexico">Mexico</option>
+                        </select>
+
                     </div>
                 </div>
                 <div class="dpd-form__bottom-row">
