--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div class="dpd-page">
+      <div class="toggler">
+        <div class="span"></div>
+      </div>
       <nav class="dpd-nav">
         <div class="dpd-nav__logo">Dropd</div>
         <div>
@@ -138,5 +141,6 @@
         </main>
       </div>
     </div>
+    <script src="navbar.js"></script>
   </body>
 </html>
