Added proper icons and references in HTML

--- a/index.html
+++ b/index.html
@@ -22,30 +22,33 @@
           <ul class="dpd-nav__list">
             <li>
               <a href="#"
-                ><i><img src="./img/iconDash.png" alt="#" /></i>Dashboard</a
+                ><i><img src="./img/Trend.png" alt="#" /></i>Dashboard</a
               >
             </li>
             <li>
               <a href="#"
-                ><i><img src="./img/iconSearch.png" alt="#" /></i>Product
-                Finder</a
+                ><i><img src="./img/Search.png" alt="#" /></i>Product Finder</a
               >
             </li>
             <li>
               <a href="#"
-                ><i><img src="./img/iconSaved.png" alt="#" /></i>Saved
+                ><i><img src="./img/Save.png" alt="#" /></i>Saved Products</a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><i><img src="./img/Mouse.png" alt="#" /></i>Listed Products</a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><i><img src="./img/cart.png" alt="#" /></i>Sold Products</a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><i><img src="./img/check.png" alt="#" /></i>Fulfilled
                 Products</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i><img src="./img/iconListed.png" alt="#" /></i>Listed
-                Products</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i><img src="./img/iconSold.png" alt="#" /></i>Sold Products</a
               >
             </li>
           </ul>
@@ -55,12 +58,17 @@
           <ul class="dpd-nav__list">
             <li>
               <a href="#"
-                ><i><img src="./img/iconSettings.png" alt="#" /></i>Settings</a
+                ><i><img src="./img/Settings.png" alt="#" /></i>Settings</a
               >
             </li>
             <li>
               <a href="#"
-                ><i><img src="./img/iconBilling.png" alt="#" /></i>Billing</a
+                ><i><img src="./img/bullseye.png" alt="#" /></i>Promotions</a
+              >
+            </li>
+            <li>
+              <a href="#"
+                ><i><img src="./img/Money.png" alt="#" /></i>Billing</a
               >
             </li>
           </ul>
@@ -68,7 +76,7 @@
         <ul class="dpd-nav__list last_nav_item">
           <li>
             <a href="#" class="logout"
-              ><i><img src="./img/logout.png" alt="#" /></i>Logout</a
+              ><i><img src="./img/Log Out.png" alt="#" /></i>Logout</a
             >
           </li>
         </ul>
