Readded company icons

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
           </div>
           <div class="dpd-options">
             <button>
-              <img src="./img/logoEbay.png" alt="#" />
+              <img src="./img/eBay.png" alt="#" />
               <p>Disconnect</p>
             </button>
             <button>
-              <img src="./img/logoAmazon.png" alt="#" />
+              <img src="./img/Amazon.png" alt="#" />
               <p>Connect</p>
             </button>
           </div>
