Removed content not required for this file

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         </div>
         <ul class="dpd-nav__list last_nav_item">
           <li>
-            <a href="#" class="logout"
-              ><i><img src="./img/Log Out.png" alt="#" /></i>Logout</a
+            <a href="./logout.html" class="logout"
+              ><i><img src="./img/Log Out.png" alt="" /></i>Logout</a
             >
           </li>
         </ul>
