--- a/logout.html
+++ b/logout.html
@@ -70,61 +70,9 @@
         </button>
       </header>
       <main>
-        <h1>Settings</h1>
-        <h2>Manage your dropshipping settings</h2>
-        <div class="dpd-tabs">
-          <button>General Settings</button>
-          <button>Description</button>
-          <button>eBay Policies</button>
-          <button>Paypal</button>
-          <button>User Settings</button>
-        </div>
-        <div class="dpd-options">
-          <button>
-            <img src="./img/eBay.png" alt="#" />
-            <p>Disconnect</p>
-          </button>
-          <button>
-            <img src="./img/Amazon.png" alt="#" />
-            <p>Connect</p>
-          </button>
-        </div>
-        <div class="dpd-expiration">Expires: 2020-04-28 15:42:45</div>
-        <form class="dpd-form">
-          <div class="dpd-form__top-row">
-            <div class="dpd-item">
-              <label for="quantity">Quantity</label>
-              <input type="number" id="quantity" name="quantity" />
-            </div>
-            <div class="dpd-item">
-              <label for="minimum">Minimum Profit</label>
-              <input type="number" id="minimum" name="minimum" />
-            </div>
-            <div class="dpd-item">
-              <label for="profit">Profit</label>
-              <input type="number" id="profit" name="profit" />
-            </div>
-            <div class="dpd-item dpd-item--country">
-              <label for="country">Country</label>
-              <select type="text" id="country" name="country">
-                <option value="canada">Canada</option>
-                <option value="usa">USA</option>
-                <option value="mexico">Mexico</option>
-              </select>
-            </div>
-          </div>
-          <div class="dpd-form__bottom-row">
-            <div class="dpd-item dpd-item--location">
-              <label for="location">Location</label>
-              <input type="text" id="location" name="location" />
-            </div>
-            <div class="dpd-item">
-              <label for="postal">Postal Code</label>
-              <input type="number" id="postal" name="postal" />
-            </div>
-          </div>
-          <button type="submit">Save Setting</button>
-        </form>
+        <h1>Are you sure you want to disconnect your eBay account?</h1>
+        <a href="#" class="button"></a>
+
       </main>
     </div>
   </div>
