--- a/index.html
+++ b/index.html
@@ -20,65 +20,24 @@
         <div>
           <h3 class="dpd-nav__title">Application</h3>
           <ul class="dpd-nav__list">
-            <li>
-              <a href="#"
-                ><i><img src="./img/Trend.png" alt="#" /></i>Dashboard</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i><img src="./img/Search.png" alt="#" /></i>Product Finder</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i><img src="./img/Save.png" alt="#" /></i>Saved Products</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i><img src="./img/Mouse.png" alt="#" /></i>Listed Products</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i><img src="./img/cart.png" alt="#" /></i>Sold Products</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i><img src="./img/check.png" alt="#" /></i>Fulfilled
-                Products</a
-              >
-            </li>
+            <li><a href="#"><i><img src="./img/Trend.png" alt="#" /></i>Dashboard</a></li>
+            <li><a href="#"><i><img src="./img/Search.png" alt="#" /></i>Product Finder</a></li>
+            <li><a href="#"><i><img src="./img/Save.png" alt="#" /></i>Saved Products</a></li>
+            <li><a href="#"><i><img src="./img/Mouse.png" alt="#" /></i>Listed Products</a></li>
+            <li><a href="#"><i><img src="./img/cart.png" alt="#" /></i>Sold Products</a></li>
+            <li><a href="#"><i><img src="./img/check.png" alt="#" /></i>FulfilledProducts</a></li>
           </ul>
         </div>
         <div>
           <h3 class="dpd-nav__title">My profile</h3>
           <ul class="dpd-nav__list">
-            <li>
-              <a href="#"
-                ><i><img src="./img/Settings.png" alt="#" /></i>Settings</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i><img src="./img/bullseye.png" alt="#" /></i>Promotions</a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i><img src="./img/Money.png" alt="#" /></i>Billing</a
-              >
-            </li>
+            <li><a href="./settings.html"><i><img src="./img/Settings.png" alt="#" /></i>Settings</a></li>
+            <li><a href="#"><i><img src="./img/bullseye.png" alt="#" /></i>Promotions</a></li>
+            <li><a href="#"><i><img src="./img/Money.png" alt="#" /></i>Billing</a></li>
           </ul>
         </div>
         <ul class="dpd-nav__list last_nav_item">
-          <li>
-            <a href="#" class="logout"
-              ><i><img src="./img/Log Out.png" alt="#" /></i>Logout</a
-            >
-          </li>
+          <li><a href="#" class="logout"><i><img src="./img/Log Out.png" alt="#" /></i>Logout</a></li>
         </ul>
       </nav>
       <div class="dpd-body"></div>
