added logout link

--- a/logout.html
+++ b/logout.html
@@ -71,7 +71,8 @@
       </header>
       <main>
         <h1>Are you sure you want to disconnect your eBay account?</h1>
-        <a href="#" class="button"></a>
+        <a href="#" class="button">Go Back</a>
+        <a href="#" class="button">Disconnect Account</a>
       </main>
     </div>
   </div>
